fix line spacing bug

--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -1,6 +1,6 @@
 .card {
     height: fit-content !important;
-    /* white-space: pre-wrap; */
+    white-space: pre-wrap;
       
 }
 
